src/objects/FieloPLT__Category__c.object
<CustomObject>
    <description>Categories organize Rewards within a Catalog.</description>
    <fields>
        <fullName>FieloPLT__Image__c</fullName>
        <description>Category image (upload an image or enter URL).</description>
        <inlineHelpText>Choose a Category image (upload an image or enter URL).</inlineHelpText>
        <label>Image</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Parent__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Main Category that includes inherited (child) Categories.</description>
        <inlineHelpText>Choose the main Category.</inlineHelpText>
        <label>Parent</label>
        <referenceTo>FieloPLT__Category__c</referenceTo>
        <relationshipLabel>Categories</relationshipLabel>
        <relationshipName>Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>FieloPLT__Program__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Program where the Category belongs to.</description>
        <inlineHelpText>Choose the Program where the Category belongs to.</inlineHelpText>
        <label>Program</label>
        <referenceTo>FieloPLT__Program__c</referenceTo>
        <relationshipLabel>Categories</relationshipLabel>
        <relationshipName>Categories</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Category</label>
    <listViews>
        <fullName>FieloPLT__All</fullName>
        <columns>NAME</columns>
        <columns>FieloPLT__Parent__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Category Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Categories</pluralLabel>
    <recordTypes>
        <fullName>FieloPLT__CategoryGroup</fullName>
        <active>true</active>
        <description>Element that represent a set of categories</description>
        <label>Category Group</label>
    </recordTypes>
    <recordTypes>
        <fullName>FieloPLT__CategoryItem</fullName>
        <active>true</active>
        <label>Category Item</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>